--- a/package.json
+++ b/package.json
@@ -7,5 +7,12 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "thehobbit85 <thehobbit85@gmail.com>",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "async": "^1.4.2",
+    "lodash": "^3.10.1",
+    "bitcoin": "git://github.com/thehobbit85/node-bitcoin.git",
+    "cc-assetid-encoder": "^0.4.0",
+    "cc-transaction": "^0.4.1"
+  }
 }
