--- a/package.json
+++ b/package.json
@@ -1,13 +1,24 @@
 {
-  "name": "cc-parser",
+  "name": "cc-block-parser",
   "version": "0.0.1",
-  "description": "[![Build Status](https://travis-ci.org/Colored-Coins/AssetId.svg?branch=master)](https://travis-ci.org/Colored-Coins/AssetId) [![Coverage Status](https://coveralls.io/repos/Colored-Coins/AssetId/badge.svg?branch=master)](https://coveralls.io/r/Colored-Coins/AssetId?branch=master) [![npm version](https://badge.fury.io/js/cc-assetid-encoder.svg)](http://badge.fury.io/js/cc-assetid-encoder) [![npm version](http://slack.coloredcoins.org/badge.svg)](http://slack.coloredcoins.org)",
+  "description": "Parse the blockchain and build a Colored-Coins",
   "main": "scanner.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha",
+    "coverage": "istanbul cover _mocha -- -R spec",
+    "coveralls": "cat ./coverage/lcov.info | coveralls"
   },
-  "author": "thehobbit85 <thehobbit85@gmail.com>",
-  "license": "ISC",
+  "contributors": [
+    {
+      "name": "Eliran Zach",
+      "email": "thehobbit85@gmail.com"
+    },
+    {
+      "name": "bejavu",
+      "email": "tal@colu.co"
+    }
+  ],
+  "license": "MIT",
   "dependencies": {
     "async": "^1.4.2",
     "lodash": "^3.10.1",
