--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
   "dependencies": {
     "async": "^1.4.2",
     "lodash": "^3.10.1",
-    "bitcoin": "git://github.com/thehobbit85/node-bitcoin.git",
+    "bitcoin-async": "^1.0.0",
     "cc-assetid-encoder": "^0.4.0",
     "cc-transaction": "^0.4.1"
   }
