--- a/package.json
+++ b/package.json
@@ -21,9 +21,10 @@
   "license": "MIT",
   "dependencies": {
     "async": "^1.4.2",
-    "lodash": "^3.10.1",
     "bitcoin-async": "^1.0.0",
     "cc-assetid-encoder": "^0.4.0",
-    "cc-transaction": "^0.4.1"
+    "cc-transaction": "^0.4.1",
+    "lodash": "^3.10.1",
+    "mongoose": "^4.1.5"
   }
 }
