--- a/package.json
+++ b/package.json
@@ -25,6 +25,6 @@
     "cc-assetid-encoder": "^0.4.0",
     "cc-transaction": "^0.4.1",
     "lodash": "^3.10.1",
-    "mongoose": "^4.1.5"
+    "mongoose": "4.1.12"
   }
 }
