--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "async": "^1.4.2",
     "bitcoin-async": "^1.0.0",
     "cc-assetid-encoder": "^0.4.0",
+    "cc-get-assets-outputs": "^0.1.0",
     "cc-transaction": "^0.4.1",
     "lodash": "^3.10.1",
     "mongoose": "4.1.12"
