cc-get-assets-outputs#COLU-948_burn

--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "async": "^1.4.2",
     "bitcoin-async": "^1.0.0",
     "cc-assetid-encoder": "^0.6.0",
-    "cc-get-assets-outputs": "^1.0.0",
+    "cc-get-assets-outputs": "git+https://github.com/Colored-Coins/cc-get-assets-outputs.git#COLU-948_burn",
     "cc-transaction": "^1.0.0",
     "lodash": "^3.10.1",
     "mongoose": "~4.4.3"
