--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "bitcoin-async": "^1.0.0",
     "cc-assetid-encoder": "^0.6.0",
     "cc-get-assets-outputs": "git+https://github.com/Colored-Coins/cc-get-assets-outputs.git#COLU-948_burn",
-    "cc-transaction": "^1.0.0",
+    "cc-transaction": "git+https://github.com/Colored-Coins/Transaction.git#COLU-948_burn",
     "lodash": "^3.10.1",
     "mongoose": "~4.4.3"
   }
