convert console.log to logger.debug

--- a/package.json
+++ b/package.json
@@ -19,7 +19,11 @@
     },
     {
       "name": "bejavu",
-      "email": "tal@colu.co"
+      "email": "tal@colu.com"
+    },
+    {
+      "name": "oleiba",
+      "email": "oded@colu.com"
     }
   ],
   "license": "MIT",
