--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
       "email": "oded@colu.com"
     }
   ],
-  "license": "MIT",
+  "license": "Apache-2.0",
   "dependencies": {
     "async": "^1.4.2",
     "bitcoin-async": "^1.0.0",
