--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
   ],
   "license": "Apache-2.0",
   "dependencies": {
-    "async": "^1.4.2",
+    "async": "~2.4.0",
     "bitcoin-async": "^1.0.0",
     "cc-assetid-encoder": "^0.6.0",
     "cc-get-assets-outputs": "^1.2.0",
